RESOLVED FIXED200866
Layout tests that call resizeTo() crash when run on iOS with IOSurface support enabled
https://bugs.webkit.org/show_bug.cgi?id=200866
Summary Layout tests that call resizeTo() crash when run on iOS with IOSurface suppor...
Tim Horton
Reported 2019-08-17 18:39:27 PDT
Layout tests that call resizeTo() crash when run on iOS with IOSurface support enabled
Attachments
Patch (6.03 KB, patch)
2019-08-17 18:39 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2019-08-17 18:39:48 PDT
Tim Horton
Comment 2 2019-08-17 18:39:50 PDT
Alexey Proskuryakov
Comment 3 2019-08-17 22:15:00 PDT
Comment on attachment 376625 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=376625&action=review > Source/WebKit/ChangeLog:15 > + except for in tests! So just pass the rects straight through, instead of Or just skip all those tests? Are they meaningful?
Tim Horton
Comment 4 2019-08-17 22:33:07 PDT
I think it’s ok that a test resizes the “window” in order to resize the view, and it is incidental to the thing the test is actually testing, so it would be weird to skip it. Also possible there are other tests we can unskip now, I have to check.
WebKit Commit Bot
Comment 5 2019-08-17 22:35:50 PDT
Comment on attachment 376625 [details] Patch Clearing flags on attachment: 376625 Committed r248828: <https://trac.webkit.org/changeset/248828>
WebKit Commit Bot
Comment 6 2019-08-17 22:35:51 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.